# Copyright 2022 Google LLC. All rights reserved.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://developers.google.com/open-source/licenses/bsd

# Subdirectories with their own CMakeLists.txt, all of whose targets are built.
add_subdirectory(dvb)
add_subdirectory(packed_audio)
add_subdirectory(ttml)
add_subdirectory(mp4)
add_subdirectory(mp2t)
add_subdirectory(webm)
add_subdirectory(webvtt)
add_subdirectory(wvm)